# c-genericHash

./: .appveyor.yml  CMakeLists.txt
.github/workflows/: unix.yml  windows.yml
include/: genericHash.h
test/: genericHash.c
